# ebook-clippings

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codacy-analysis.yml
app/: settings.py
ebook_clippings/: __init__.py  clippings.py
ebook_clippings/scripts/: import.py
tests/: conftest.py  test_clippings.py
tests/resources/: MyClippings.txt
