[tool.poetry]
name = "ebook-clippings"
version = "0.1.0"
description = ""
authors = ["Valter Nepomuceno <valter.nep@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
import = "ebook_clippings.scripts.import:import_clippings_command"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
ftfy = "^6.0.3"
coloredlogs = "^15.0.1"
black = "^21.9b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
